Pridana vychodiskova kapitola

--- a/_docs/text/references.bib
+++ b/_docs/text/references.bib
@@ -66,6 +66,13 @@
 	year   		= {2017},
 	note		= {\\\url{https://doc.wikimedia.org/mediawiki-core/master/php/}}
 }
+@Misc{MediaWikiHelpFormating,
+	author 		= {MediaWiki.org},
+	title  		= {Help:Formatting MediaWiki - [online]},
+	month  		= {Máj},
+	year   		= {2017},
+	note		= {\\\url{https://www.mediawiki.org/wiki/Help:Formatting}}
+}
 @Misc{MediaWikiExtension,
 	author 		= {MediaWiki.org},
 	title  		= {Manual:Developing extensions [online]},
@@ -75,7 +82,7 @@
 }
 @Misc{AngularTutorial,
 	author 		= {W3Schools.com},
-	title  		= {AngularJS Tutorial [online]},
+	title  		= {AngularJS Tutorial [online]},
 	month  		= {Máj},
 	year   		= {2017},
 	note		= {\\\url{https://www.w3schools.com/angular/}}
