fixed initial import from loaded metadata

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -55,6 +55,7 @@
 	"canvas" : "Canvas",
 
 	"options" : "Options",
+	"zoom": "Zoom",
 	"x-coords" : "X coords",
 	"y-coords" : "Y coords",
 	"height" : "Height",
